hphp/hack/test/typecheck/function_pointer/class_meth_reified_self.php.exp
File "class_meth_reified_self.php", line 7, characters 5-34:
Invalid function reference. This function requires reified generics. Prefer using a lambda instead. (Typing[4381])
